objects/Sales_Territory_Account_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>Account_To_Territory_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>An external id field which will have concatenation of Account Id &amp; Sales Territory Id.</description>
        <externalId>true</externalId>
        <label>Account To Territory Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sales Territory Account Assignments</relationshipLabel>
        <relationshipName>Sales_Territory_Account_Assignments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AddToAccountProcess__c</fullName>
        <defaultValue>true</defaultValue>
        <label>AddToAccountProcess</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_On__c</fullName>
        <formula>LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Assignment_Type__c</fullName>
        <label>Assignment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Territory Engine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Crediting_Type__c</fullName>
        <formula>TEXT(Sales_Territory__r.MyComp_Crediting_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Crediting Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MyComp_ID__c</fullName>
        <formula>Sales_Territory__r.MyComp_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MyComp ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Territory_Definition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Territory Definition</label>
        <referenceTo>Sales_Territory_Definition__c</referenceTo>
        <relationshipLabel>Sales Territory Account Assignments</relationshipLabel>
        <relationshipName>Sales_Territory_Account_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Territory_Type__c</fullName>
        <formula>TEXT( Sales_Territory__r.MyComp_Sales_Territory_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Territory Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Territory Short Name</label>
        <referenceTo>Sales_Territory__c</referenceTo>
        <relationshipLabel>Sales Territory Account Assignments</relationshipLabel>
        <relationshipName>Sales_Territory_Account_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Territory_Country__c</fullName>
        <formula>TEXT( Sales_Territory__r.MyComp_Territory_Country__c)</formula>
        <label>Territory Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Region__c</fullName>
        <formula>TEXT(Sales_Territory__r.MyComp_Territory_Region__c)</formula>
        <label>Territory Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrackAssociationToDelete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Track which Account and Sales Territory associations are eligible for deletions.</description>
        <label>TrackAssociationToDelete</label>
        <type>Checkbox</type>
    </fields>
    <label>Sales Territory Account Assignment</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Sales Territory Account Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Territory Account Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>STAccountAssignmntRecordUpdateValidation</fullName>
        <active>true</active>
        <description>Sales Territory, Account &amp; Assignment Type cannot be changed.</description>
        <errorConditionFormula>AND (!ISNEW() ,(OR(ISCHANGED(Assignment_Type__c) , ISCHANGED(Sales_Territory__c), ISCHANGED(Account__c))))</errorConditionFormula>
        <errorMessage>Sales Territory, Account &amp; Assignment Type cannot be changed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TypeMustBeManualForAccountAddedManually</fullName>
        <active>true</active>
        <description>Assignment Type Must Be Manual For Accounts To Be Added Manually.</description>
        <errorConditionFormula>AND($Profile.Name = &apos;Advanced Admin&apos;, NOT(ISPICKVAL(Assignment_Type__c , &apos;Manual&apos;)))</errorConditionFormula>
        <errorMessage>Assignment Type must be &apos;Manual&apos; for Accounts to be added manually.</errorMessage>
    </validationRules>
</CustomObject>